<resources>
    <!-- All -->
    <string name="app_name">Informations Positives</string>
    <string name="api_weather_token">e61315eb20b99a43c33db56da2431e0e</string>
    <string name="local_db_name">info-positives-database</string>

    <!-- Image Content Description -->
    <string name="logo_informations_positives">Logo Informations Positives</string>
    <string name="loading_image">Image Chargement</string>
    <string name="logo_informations_positives_transparent">Logo Informations Positives Transparent</string>
    <string name="icon_search">Icône Recherche</string>
    <string name="icon_left_arrow">Icône Flèche Gauche</string>
    <string name="icon_filter_white">Icône Filtre</string>
    <string name="category_picture">Image Categorie</string>
    <string name="icon_validate">Icône Validation</string>
    <string name="icon_down_arrow">Icône Flèche Bas</string>
    <string name="category_icon">Icône Categorie</string>
    <string name="image_article">Image Article</string>
    <string name="icon_views">Icône Vues</string>
    <string name="icon_likes">Icône J\'aime</string>
    <string name="icon_clock">Icône Date</string>
    <string name="icon_feather">Icône Plume</string>
    <string name="icon_video_play">Icône Vidéo</string>
    <string name="image_article_header">Image Article En-tête</string>
    <string name="icon_cross">Icône Croix</string>
    <string name="icon_menu_item">Icône Item Menu</string>
    <string name="icon_rate_us">Icône Note-nous</string>
    <string name="image_header_about_us">Image En-tête</string>
    <string name="image_logo_news_api">Logo NewsAPI</string>

    <!-- Transition Name -->
    <string name="category_icon_transition">categoryIconTransition</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_navigation_menu_categories">Catégories</string>
    <string name="bottom_navigation_menu_feed">Fil d\'actualité</string>
    <string name="bottom_navigation_menu_settings">Paramètres</string>

    <!-- feed_fragment.xml -->
    <string name="loading_articles">Un peu de patience,\n
        vos superbes articles arrivent…</string>
    <string name="refresh_data">Rafraîchir</string>

    <!-- search_activity.xml -->
    <string name="hint_edit_text_search">Ne sois pas timide, que recherches-tu ?</string>
    <string name="title_filters">Gérer les filtres</string>
    <string name="beginning_date">À partir de</string>
    <string name="ending_date">jusqu\'à</string>

    <!-- article_row.xml -->
    <string name="written_by">Rédigé par\u0020</string>

    <!-- article.xml -->
    <string name="like_exclamation_mark">Liké !</string>
    <string name="did_you_like_article">Tu as aimé cet article ?</string>
    <string name="more_articles_reco">Quand il n\'y a plus d\'article…\nEt bah il y en a encore ♪</string>
    <string name="shared_article_subject">Regarde ce super article positif lu sur l\'app \"Informations Positives\" ! &#128525;</string>
    <string name="chooser_message">&#x1F680; Envoyer cet article incroyable…</string>
    <string name="written_by_sample">Redigé par Michaël Doe le 06 janvier 2020 à 16h25</string>
    <string name="see_full_article">Voir l\'article entier.</string>
    <string name="mail_content_to_see_full_article">Pour lire l\'article complet :\u0020</string>
    <string name="mail_content_open_app">Pour voir plus d\articles intéressants comme celui-là, télécharge l\'app Informations Positives :\u0020</string>

    <!-- article_in_story.xml -->
    <string name="see_article">Voir l\'article</string>
    <string name="initial_count_down_value">10</string>

    <!-- settings_fragment.xml -->
    <string name="settings">Paramètres</string>
    <string name="top_categories_title">Ton TOP 3</string>
    <string name="top_categories_desc">Choisis les 3 catégories que tu souhaites voir en priorité dans ton fil d\'actualité.</string>
    <string name="notifications_item">Notifications \"Quote du jour\"</string>
    <string name="rate_us">Note-nous !</string>
    <string name="email_ip">cyril.7he4ndroid@gmail.com</string>
    <string name="subject_email">[Informations Positives] Bonjour ! &#x1F604;</string>
    <string name="chooser_title_email">Envoyez-nous un e-mail ! &#x1F4DD;</string>
    <plurals name="number_top_categories_selected">
        <item quantity="zero">Catégorie sélectionnée : %d/3.</item>
        <item quantity="one">Catégorie sélectionnée : %d/3.</item>
        <item quantity="other">Catégories sélectionnées : %d/3.</item>
    </plurals>

    <!-- search_results_fragment.xml -->
    <string name="recent_searches">Recherches récentes</string>
    <string name="delete_all_recent_searches"><u>Effacer les recherches</u></string>

    <!-- about_us_dialog_fragment.xml -->
    <string name="app_name_copyright">Informations Positives ©</string>
    <string name="about_us_desc">Pensée et développée par Cyril \"The Android\" Pina-Lopes.</string>
    <string name="powered_by">Publications alimentées par&#160;</string>
    <string name="newsapi_url">NewsApi.org</string>

    <!-- NetworkErrorFragment.java -->
    <string name="no_network_connection">Aucune connexion internet.</string>
    <string name="article_not_found">Aucune article trouvé.</string>

    <!-- Notification.java / NotificationsBroadcastReceiver.java -->
    <string name="channel_name">IPNotificationChannel</string>
    <string name="channel_description">Notification channel principal</string>
    <string name="notification_title">Quote du jour</string>
    <string name="notification_desc">Pierre qui roule n\'amasse pas mousse.</string>

    <!-- DataStorage.java -->
    <string name="preference_file_key">prefsFileKey</string>
    <string name="saved_selected_categories_key">selectedCategoriesKey</string>
    <string name="saved_notifications_state_key">notificationsStateKey</string>
    <string name="saved_current_theme_key">nightModeStateKey</string>

    <!-- NewsApiService.java -->
    <string name="country_prefix">fr</string>
    <string name="lang_prefix">fr</string>

   <!-- FeedFragment.java -->
    <string name="general_category">Général</string>
    <string name="general_icon_res">ic_general</string>

    <string name="text">
        Samedi après-midi, John Doe est intervenu à Albi pour secourir un chiot tombé dans le Tarn. Sans son intervention, celui-ci se serait peut-être noyé.
        « C’est une jeune du club d’aviron qui est venu m’alerter,
        se souvient Alexis, lui aussi pratiquant de ce sport. Elle m’a dit qu’il y avait un petit chien qui était en train de se noyer.
        Je suis allé voir, on l’a cherché, on a eu du mal à le trouver. Il avait dû tomber dans le Tarn, peut-être en voulant boire,
        raconte le jeune homme de 20 ans. Le Tarn a baissé, il y avait environ 50 cm entre la berge et l’eau, et il ne pouvait pas
        remonter. »
        Sur le quai, un autre chien, probablement la mère du chiot, est présent et essaie de le secourir. En vain.
        « On a utilisé une rame d’aviron pour le soulever et le donner à sa mère, mais elle avait plus peur de nous qu’autre chose », détaille le jeune sportif. Au final, avec un autre membre du club, ils parviennent à le récupérer et le mettre dans le bateau. « Le maître est arrivé entre-temps et le chiot est remonté en haut jusqu’au terrain », précise Alexis.
        L’animal est reparti en gambadant, presque comme si rien ne s’était passé, finalement pas plus perturbé que ça par la baignade inattendue.
        Sur les berges, Pierre a assisté à la scène: « Il a aussitôt volé au secours du petit chien, l’a remis sur la berge et est reparti sans que personne ne remarque rien. C’est un acte d’amour envers les animaux. J’ai personnellement été ému par ce geste », témoigne le promeneur.
    </string>

    <!--Category description -->
    <string name="nature_desc">Découvre les meilleures nouvelles qui raviront Mère Nature. &#x1F333;</string>
    <string name="fauna_desc">Savais-tu que les chauves-souris tournaient toujours à gauche en sortant d\'une grotte ? Non ? Tu es donc au bon endroit. &#x1F987;</string>
    <string name="techno_desc">L\'antre des férus de nouvelles technos qui essayent de transférer leur cerveau dans un super ordinateur (ou d\'apprendre le C++, au choix). &#x1F4BB;</string>
    <string name="humanitarian_desc">Des superbes anecdotes qui prouvent bien que ce sont les gentils qui gagnent toujours à la fin. &#x1F493;</string>
    <string name="food_desc">Ton pote vegan un peu lourd sous forme d\'articles. &#x1F34E;</string>
    <string name="economy_desc">L\'argent rend-il heureux ? Tu n\'auras certainement jamais la réponse mais réconforte-toi avec ces articles enrichissants. &#x1F4B8;</string>
    <string name="sport_desc">Un regain de motivation pour renouveler ton abonnement à cette salle que tu as délaissée depuis 1 an après 3 séances. &#x1F3CB;</string>
</resources>