<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View" />
        <variable
            name="articleCategoryViewModel"
            type="com.pinalopes.informationspositives.categories.viewmodel.ArticleCategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_card_view_article_category"
        android:maxHeight="@dimen/height_card_view_article_category"
        android:minHeight="@dimen/height_card_view_article_category"
        android:background="?attr/colorOnBackground"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_card_view_article_row"
            app:cardCornerRadius="@dimen/radius_card_view_article_row"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorBackgroundFloating">

                <ImageView
                    android:id="@+id/articleImage"
                    android:layout_width="@dimen/width_image_article_category"
                    android:layout_height="@dimen/height_image_article_category"
                    android:src="@{articleCategoryViewModel.imageRes}"
                    app:srcCompat="@{articleCategoryViewModel.imageRes}"
                    tools:srcCompat="@{articleCategoryViewModel.imageRes}"
                    android:contentDescription="@string/image_article"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <View
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/zero"
                    android:background="@drawable/article_category_row_background"
                    app:layout_constraintTop_toTopOf="@id/articleImage"
                    app:layout_constraintBottom_toBottomOf="@id/articleImage"
                    app:layout_constraintStart_toStartOf="@id/articleImage"
                    app:layout_constraintEnd_toEndOf="@id/articleImage"/>

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/zero"
                    android:contentDescription="@string/icon_video_play"
                    android:layout_margin="@dimen/margin_icon_video_play"
                    android:visibility="@{articleCategoryViewModel.video ? View.VISIBLE : View.GONE}"
                    android:alpha=".5"
                    android:src="@drawable/ic_video_play"
                    app:srcCompat="@drawable/ic_video_play"
                    tools:srcCompat="@drawable/ic_video_play"
                    app:layout_constraintTop_toTopOf="@id/articleImage"
                    app:layout_constraintBottom_toBottomOf="@id/articleImage"
                    app:layout_constraintStart_toStartOf="@id/articleImage"
                    app:layout_constraintEnd_toEndOf="@id/articleImage" />

                <TextView
                    android:id="@+id/articleTitleTextView"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_article_category_title"
                    android:fontFamily="@font/espera"
                    android:text="@{articleCategoryViewModel.title}"
                    android:textSize="@dimen/size_text_article_category_title"
                    app:layout_constraintStart_toEndOf="@id/articleImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/writerTextView"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end_article_writer"
                    android:layout_marginEnd="@dimen/margin_start_end_article_writer"
                    android:layout_marginTop="@dimen/margin_top_article_writer"
                    android:text="@{articleCategoryViewModel.writer}"
                    android:textSize="@dimen/size_text_article_category_writer"
                    android:textColor="@android:color/darker_gray"
                    android:fontFamily="@font/made_tommy"
                    app:layout_constraintTop_toBottomOf="@id/articleTitleTextView"
                    app:layout_constraintStart_toEndOf="@id/articleImage"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_article_views"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/articleImage"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/clockIcon"
                        android:layout_width="@dimen/size_icon_clock_small"
                        android:layout_height="@dimen/size_icon_clock_small"
                        android:layout_marginStart="@dimen/margin_start_bottom_icon_clock"
                        android:contentDescription="@string/icon_clock"
                        android:src="@drawable/ic_clock"
                        app:srcCompat="@drawable/ic_clock"
                        tools:srcCompat="@drawable/ic_clock"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/articleImage" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_text_article_time"
                        android:fontFamily="@font/made_tommy"
                        android:text="@{articleCategoryViewModel.date}"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/size_text_article_category_date"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/clockIcon" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/articleViewsLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_article_views"
                    android:layout_marginStart="@dimen/margin_start_article_views"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/articleLikesLayout"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/size_image_views_small"
                        android:layout_height="@dimen/size_image_views_small"
                        android:layout_marginEnd="@dimen/margin_end_image_views"
                        android:contentDescription="@string/icon_views"
                        android:src="@drawable/ic_views_black"
                        app:srcCompat="@drawable/ic_views_black"
                        tools:srcCompat="@drawable/ic_views_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_text_views"
                        android:text='@{String.valueOf(articleCategoryViewModel.nbViews)}'
                        android:textSize="@dimen/size_text_views_small"
                        android:fontFamily="@font/made_tommy_bold"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/articleLikesLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_article_likes"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/size_image_likes_small"
                        android:layout_height="@dimen/size_image_likes_small"
                        android:contentDescription="@string/icon_likes"
                        android:src="@drawable/ic_like"
                        app:srcCompat="@drawable/ic_like"
                        tools:srcCompat="@drawable/ic_like" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_text_likes"
                        android:text='@{String.valueOf(articleCategoryViewModel.nbLikes)}'
                        android:textSize="@dimen/size_text_likes_small"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/made_tommy_bold" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
